--- a/frontend/oasys/tsconfig.json
+++ b/frontend/oasys/tsconfig.json
@@ -6,6 +6,20 @@
         "module": "ESNext",
         "skipLibCheck": true,
 
+        /* Absolute Path */
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"],
+            "@api/*": ["src/api/*"],
+            "@assets/*": ["src/assets/*"],
+            "@config/*": ["src/config/*"],
+            "@components/*": ["src/components/*"],
+            "@customTypes/*": ["src/customTypes/*"],
+            "@hooks/*": ["src/hooks/*"],
+            "@pages/*": ["src/pages/*"],
+            "@utils/*": ["src/utils/*"]
+        },
+
         /* Bundler mode */
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
