--- a/Back-End/.gitignore
+++ b/Back-End/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/src/main/resources/application.yml/target/
 
 ### STS ###
 .apt_generated
