--- a/Back-End/.gitignore
+++ b/Back-End/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 !**/src/main/resources/application.yml
 
-!src/main/resources/application.yml
+src/main/resources/env.yml
 
 ### STS ###
 .apt_generated
