--- a/Back-End/src/main/resources/application.yml
+++ b/Back-End/src/main/resources/application.yml
@@ -1,20 +1,23 @@
 server:
   port: 8081
 
-#spring:
-#  # Datasource 설정
-#  datasource:
-#    driver-class-name: org.mariadb.jdbc.Driver
-#    # username:
-#    # password:
-#    username:
-#    password:
-#    # url: jdbc:mariadb://[서버주소]:[포트번호]/[DB명]
-#    url:
-#    hikari:
-#      maximum-pool-size: 10
-#      connection-init-sql: SELECT 1
-#      connection-timeout: 5000
-#      idle-timeout: 600000
-#      max-lifetime: 1800000
-#      auto-commit: true
+spring:
+  # Datasource 설정
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: ssafy
+    # url: jdbc:mariadb://[서버주소]:[포트번호]/[DB명]
+    url: jdbc:mysql://localhost:3306/oasys?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+    hibernate:
+      ddl-auto: create
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+
+logging:
+  level:
+    "[org.hibernate.type.descriptor.sql]": trace
