--- a/Back-End/pom.xml
+++ b/Back-End/pom.xml
@@ -149,6 +149,26 @@
 			<groupId>com.google.cloud</groupId>
 			<artifactId>google-cloud-texttospeech</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.theokanning.openai-gpt3-java/api -->
+		<dependency>
+			<groupId>com.theokanning.openai-gpt3-java</groupId>
+			<artifactId>api</artifactId>
+			<version>0.16.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.theokanning.openai-gpt3-java/service -->
+		<dependency>
+			<groupId>com.theokanning.openai-gpt3-java</groupId>
+			<artifactId>service</artifactId>
+			<version>0.16.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.theokanning.openai-gpt3-java/client -->
+		<dependency>
+			<groupId>com.theokanning.openai-gpt3-java</groupId>
+			<artifactId>client</artifactId>
+			<version>0.16.0</version>
+		</dependency>
+
+
 
 
 		<!--    s3      -->
