--- a/Back-End/src/main/resources/application.yml
+++ b/Back-End/src/main/resources/application.yml
@@ -17,6 +17,9 @@ spring:
     hibernate:
       ddl-auto: create
     database-platform: org.hibernate.dialect.MySQL8Dialect
+  config:
+    import: "file:./src/main/resources/env.yml"
+
 
 logging:
   level:
