Feat: manager service - redis, mariadb
Feat: manager service - redis, mariadb

--- a/Back-End/src/main/resources/application.yml
+++ b/Back-End/src/main/resources/application.yml
@@ -1,20 +1,19 @@
 server:
-  port: 8081
+  port: 8080
 
-#spring:
-#  # Datasource 설정
-#  datasource:
-#    driver-class-name: org.mariadb.jdbc.Driver
-#    # username:
-#    # password:
-#    username:
-#    password:
-#    # url: jdbc:mariadb://[서버주소]:[포트번호]/[DB명]
-#    url:
-#    hikari:
-#      maximum-pool-size: 10
-#      connection-init-sql: SELECT 1
-#      connection-timeout: 5000
-#      idle-timeout: 600000
-#      max-lifetime: 1800000
-#      auto-commit: true
+spring:
+  # redis 설정
+  redis:
+    host: redis
+    port: 6379
+    database: 0
+    
+  # Datasource 설정
+  datasource:
+    url: jdbc:mariadb://mariadb:3306/oasys
+    hikari:
+      maximum-pool-size: 10
+      connection-timeout: 20000
+
+  config:
+    import: classpath:application-secrets.yml
