--- a/Back-End/src/main/resources/application.yml
+++ b/Back-End/src/main/resources/application.yml
@@ -25,6 +25,8 @@ spring:
     hibernate:
       ddl-auto: create
     database-platform: org.hibernate.dialect.MySQL8Dialect
+  config:
+    import: "file:./src/main/resources/env.yml"
 
 logging:
   level:
