--- a/frontend/oasys/.eslintrc.json
+++ b/frontend/oasys/.eslintrc.json
@@ -21,6 +21,7 @@
     "plugins": ["react", "@typescript-eslint", "prettier"],
     "rules": {
         "react/react-in-jsx-scope": 0,
+        "react/require-default-props": 0,
         "prettier/prettier": ["error", { "endOfLine": "auto" }],
         "@typescript-eslint/explicit-function-return-type": 0,
         "@typescript-eslint/explicit-module-boundary-types": 0,
