--- a/frontend/oasys/nginx.conf
+++ b/frontend/oasys/nginx.conf
@@ -31,6 +31,7 @@ http {
         location / {
             root /usr/share/nginx/html;
             index index.html;
+            try_files $uri $uri/ /index.html; 
         }
     }
 }
