--- a/Back-End/pom.xml
+++ b/Back-End/pom.xml
@@ -49,8 +49,6 @@
 			<version>5.6.15.Final</version>
 		</dependency>
 
-
-
 		<!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
 <!--			<artifactId>spring-boot-starter-data-redis</artifactId>-->
@@ -133,9 +131,6 @@
 			<version>8.1.0</version>
 		</dependency>
 
-
-
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -146,7 +141,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 
 		<!--    s3      -->
 <!--		<dependency>-->
@@ -175,6 +169,13 @@
 <!--			<groupId>org.springframework.cloud</groupId>-->
 <!--			<artifactId>spring-cloud-starter-bootstrap</artifactId>-->
 <!--		</dependency>-->
+
+		<!-- okhttp -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.10.0</version>
+		</dependency>
 
 		<!-- sms notification -->
 		<dependency>
