--- a/Back-End/pom.xml
+++ b/Back-End/pom.xml
@@ -161,6 +161,13 @@
 			<artifactId>service</artifactId>
 			<version>0.16.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.python/jython -->
+		<dependency>
+			<groupId>org.python</groupId>
+			<artifactId>jython</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.theokanning.openai-gpt3-java/client -->
 		<dependency>
 			<groupId>com.theokanning.openai-gpt3-java</groupId>
