--- a/frontend/oasys/package.json
+++ b/frontend/oasys/package.json
@@ -18,12 +18,10 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.15.0",
-<<<<<<< HEAD
         "react-speech-kit": "^3.0.1",
-        "react-speech-recognition": "^3.10.0"
-=======
+        "react-speech-recognition": "^3.10.0",
+        "react-webcam": "^7.1.1",
         "zustand": "^4.4.1"
->>>>>>> ba7f04fa2de67b3ed6367f05b149e02d520fe07f
     },
     "devDependencies": {
         "@types/node": "^20.6.0",
