--- a/Back-End_AI/src/main/resources/application.yml
+++ b/Back-End_AI/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/oasys#?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password: ssafy
+    password: 1234
     # url: jdbc:mariadb://[서버주소]:[포트번호]/[DB명]
 #    hikari:
 #      maximum-pool-size: 10
