--- a/frontend/oasys/tsconfig.json
+++ b/frontend/oasys/tsconfig.json
@@ -30,6 +30,7 @@
 
         /* Linting */
         "strict": true,
+        "noImplicitAny": false,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
