--- a/Back-End/src/main/resources/application.yml
+++ b/Back-End/src/main/resources/application.yml
@@ -6,6 +6,13 @@ logging:
     com.dolfin.oasys: DEBUG
     
 spring:
+  # jpa 설정
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
   # redis 설정
   redis:
     template:
