--- a/Back-End/src/main/resources/application.yml
+++ b/Back-End/src/main/resources/application.yml
@@ -8,6 +8,9 @@ logging:
 spring:
   # jpa 설정
   jpa:
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
     properties:
       hibernate:
