--- a/frontend/oasys/nginx.conf
+++ b/frontend/oasys/nginx.conf
@@ -26,7 +26,7 @@ http {
     server {
         listen 80;
 
-        server_name j9a106.p.ssafy.io
+        server_name j9a106.p.ssafy.io;
 
         location / {
             root /usr/share/nginx/html;
