--- a/Back-End_AI/src/main/resources/application.yml
+++ b/Back-End_AI/src/main/resources/application.yml
@@ -6,18 +6,17 @@ openai:
 spring:
   # Datasource 설정
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/oasys#?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: 1234
-    # url: jdbc:mariadb://[서버주소]:[포트번호]/[DB명]
-#    hikari:
-#      maximum-pool-size: 10
-#      connection-init-sql: SELECT 1
-#      connection-timeout: 5000
-#      idle-timeout: 600000
-#      max-lifetime: 1800000
-#      auto-commit: true
+    username: admin
+    password: zxcv1234
+    url: jdbc:mariadb://j9a106.p.ssafy.io:3306/oasys
+    hikari:
+      maximum-pool-size: 10
+      connection-init-sql: SELECT 1
+      connection-timeout: 5000
+      idle-timeout: 600000
+      max-lifetime: 1800000
+      auto-commit: true
+
   jpa:
     generate-ddl: true
     properties:
@@ -25,8 +24,7 @@ spring:
         show_sql: true
         format_sql: true
     hibernate:
-      ddl-auto: create
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+      ddl-auto: none
   config:
     import: "file:./src/main/resources/env.yml"
 
