--- a/frontend/oasys/Dockerfile
+++ b/frontend/oasys/Dockerfile
@@ -1,4 +1,7 @@
 FROM nginx:alpine
+
+VOLUME /etc/letsencrypt
+
 COPY ./dist /usr/share/nginx/html
 COPY ./nginx.conf /etc/nginx/nginx.conf
 COPY .env.production ./.env
