Feat: Updated nginx.conf for reverse proxy configuration
Feat: Updated nginx.conf for reverse proxy configuration.

--- a/frontend/oasys/nginx.conf
+++ b/frontend/oasys/nginx.conf
@@ -37,7 +37,7 @@ http {
     # HTTPS 설정 (443번 포트)
     server {
         listen       443 ssl;
-        server_name  memorycapsule.site;
+        server_name  j9a106.p.ssafy.io;
 
         ssl_certificate /etc/letsencrypt/live/j9a106.p.ssafy.io/fullchain.pem; # managed by Certbot
         ssl_certificate_key /etc/letsencrypt/live/j9a106.p.ssafy.io/privkey.pem; # managed by Certbot
