--- a/frontend/oasys/nginx.conf
+++ b/frontend/oasys/nginx.conf
@@ -49,6 +49,13 @@ http {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
             try_files $uri $uri/ /index.html;
+
+            proxy_pass https://backend:8080; # 백엔드 서버 주소 및 포트
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
+
     }
 }
