--- a/frontend/oasys/nginx.conf
+++ b/frontend/oasys/nginx.conf
@@ -45,8 +45,8 @@ http {
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers         HIGH:!aNULL:!MD5;
 
-        location /api {
-            proxy_pass http://backend:8080;
+        location ^~ /manager {
+            proxy_pass http://backend:8080$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
