Feat: Update manager service for notification
Feat: Update manager service for notification

--- a/Back-End/pom.xml
+++ b/Back-End/pom.xml
@@ -92,6 +92,21 @@
 			<version>2.15.2</version>
 		</dependency>
 
+		<!-- prometheus -->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.11.3</version>
+		</dependency>
+
+		<!-- sms notification -->
+		<dependency>
+			<groupId>net.nurigo</groupId>
+			<artifactId>sdk</artifactId>
+			<version>4.3.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
