Refactor: Modify admin login logic

--- a/frontend/oasys/.env.production
+++ b/frontend/oasys/.env.production
@@ -1,1 +1,3 @@
-VITE_SERVER_URL=http://j9a106.p.ssafy.io:8081
+VITE_SERVER_URL=https://j9a106.p.ssafy.io
+VITE_ADMIN_ID=ssafy
+VITE_ADMIN_PASSWORD=dolfin789
