--- a/frontend/oasys/package.json
+++ b/frontend/oasys/package.json
@@ -21,6 +21,7 @@
         "react-speech-kit": "^3.0.1",
         "react-speech-recognition": "^3.10.0",
         "react-webcam": "^7.1.1",
+        "socket.io-client": "^4.7.2",
         "zustand": "^4.4.1"
     },
     "devDependencies": {
